organisation of train and test folders : the dataset has been downloaded as tar file and opened in the s3 storage, after that train_img and test_img folders have been created using the json metadata file information

--- a/food-classifier_sagemaker.ipynb
+++ b/food-classifier_sagemaker.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,14 +32,114 @@
       "Length: 4996278331 (4.7G) [application/x-gzip]\n",
       "Saving to: ‘../data/food-101.tar.gz’\n",
       "\n",
-      "../data/food-101.ta   4%[                    ] 228.48M  12.6MB/s    eta 5m 58s "
+      "../data/food-101.ta 100%[===================>]   4.65G  12.2MB/s    in 6m 8s   \n",
+      "\n",
+      "2020-02-22 12:15:23 (13.0 MB/s) - ‘../data/food-101.tar.gz’ saved [4996278331/4996278331]\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "#the data will be downloaded and automatically extracted to the data folder\n",
     "%mkdir ../data\n",
     "!wget -O ../data/food-101.tar.gz http://data.vision.ee.ethz.ch/cvl/food-101.tar.gz\n",
     "!tar -zxf ../data/food-101.tar.gz -C ../data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Organise train and test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import shutil\n",
+    "import os\n",
+    "from os import path\n",
+    "\n",
+    "metafolder = \"../data/food-101/meta/\"\n",
+    "train_meta = pd.read_json(path_or_buf = metafolder + \"train.json\")\n",
+    "test_meta = pd.read_json(path_or_buf = metafolder + \"test.json\")\n",
+    "\n",
+    "def organise_files_from_df(df, datafolder, datatarget):\n",
+    "    \"\"\"\n",
+    "    This function moves files contained in a folder (datafolder) to a target path (datatarget),\n",
+    "    based on the information contained on a dataframe (df) where each column corresponds to a \n",
+    "    class name (sub-folder). Every column of the dataset contains a list of filenames to be moved.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    #creating target folder\n",
+    "    if not path.exists(datatarget):\n",
+    "        os.mkdir(datatarget)\n",
+    "    \n",
+    "    #iterating through dataframe columns ( =  labels)\n",
+    "    for label in list(df.columns):\n",
+    "        \n",
+    "        #create folder\n",
+    "        foldername = datatarget + str(label)\n",
+    "        \n",
+    "        if not path.exists(foldername):\n",
+    "            os.mkdir(foldername)\n",
+    "        \n",
+    "        #move each file\n",
+    "        for file in list(df[label]):\n",
+    "            \n",
+    "            fileoriginal =  datafolder + file + \".jpg\"\n",
+    "            filetarget = datatarget +\"/\" + file + \".jpg\"\n",
+    "            \n",
+    "            try:\n",
+    "                if not path.exists(filetarget):\n",
+    "                    shutil.copyfile(fileoriginal, filetarget)\n",
+    "\n",
+    "            except FileNotFoundError:\n",
+    "                print(\"File {} not found!\".format(file))\n",
+    "                pass\n",
+    "\n",
+    "#origin folder\n",
+    "imagefolder = \"../data/food-101/images/\"\n",
+    "\n",
+    "#target folder - train\n",
+    "trainfolder = \"../data/food-101/train_img/\"\n",
+    "organise_files_from_df(train_meta, imagefolder, trainfolder)\n",
+    "\n",
+    "#target folder -test\n",
+    "testfolder = \"../data/food-101/test_img/\"\n",
+    "organise_files_from_df(test_meta, imagefolder, testfolder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250,)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_meta['churros'].shape"
    ]
   },
   {
