--- a/food-classifier_sagemaker.ipynb
+++ b/food-classifier_sagemaker.ipynb
@@ -6,10 +6,17 @@
    "source": [
     "## Downloading the data\n",
     "\n",
-    "The dataset is retrieved from the website http://data.vision.ee.ethz.ch/cvl/food-101.tar.gz  \n",
+    "The dataset is retrieved from the website http://data.vision.ee.ethz.ch/cvl/food-101.tar.gz using as a reference the following research paper\n",
     "\n",
     "\n",
-    "> Lukas Bossard, Matthieu Guillaumin, Luc Van Gool - Food-101 – Mining Discriminative Components with Random Forests"
+    "> Lukas Bossard, Matthieu Guillaumin, Luc Van Gool - Food-101 – Mining Discriminative Components with Random Forests\n",
+    "\n",
+    "The Food-101 data set consists of images from Foodspotting [1]. Any use beyond\n",
+    "   scientific fair use must be negociated with the respective picture owners\n",
+    "   according to the Foodspotting terms of use [2].\n",
+    "\n",
+    "[1] http://www.foodspotting.com/\n",
+    "[2] http://www.foodspotting.com/terms/"
    ]
   },
   {
@@ -40,10 +47,24 @@
     }
    ],
    "source": [
-    "#the data will be downloaded and automatically extracted to the data folder\n",
+    "#the data will be downloaded and automatically extracted to the data folder ../data/food-101/images\n",
     "%mkdir ../data\n",
     "!wget -O ../data/food-101.tar.gz http://data.vision.ee.ethz.ch/cvl/food-101.tar.gz\n",
     "!tar -zxf ../data/food-101.tar.gz -C ../data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing essential modules\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import shutil\n",
+    "import os\n",
+    "from os import path"
    ]
   },
   {
@@ -59,11 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import shutil\n",
-    "import os\n",
-    "from os import path\n",
+    "#dividing into train and test set using the json metadata \n",
     "\n",
     "metafolder = \"../data/food-101/meta/\"\n",
     "train_meta = pd.read_json(path_or_buf = metafolder + \"train.json\")\n",
@@ -112,34 +129,43 @@
     "\n",
     "#target folder -test\n",
     "testfolder = \"../data/food-101/test_img/\"\n",
-    "organise_files_from_df(test_meta, imagefolder, testfolder)"
+    "organise_files_from_df(test_meta, imagefolder, testfolder)\n",
+    "\n",
+    "#deleting origin folder\n",
+    "shutil.rmtree(imagefolder)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(250,)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "test_meta['churros'].shape"
+    "## Load Data to S3\n",
+    "\n",
+    ">The below cells load in some AWS SageMaker libraries, starts a SageMaker session and creates a default bucket. After creating this bucket, it upload the locally stored data to S3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import sagemaker\n",
+    "\n",
+    "# session and role\n",
+    "sagemaker_session = sagemaker.Session()\n",
+    "role = sagemaker.get_execution_role()\n",
+    "\n",
+    "# create an S3 bucket\n",
+    "bucket = sagemaker_session.default_bucket()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Upload training and testing data"
    ]
   },
   {
@@ -147,7 +173,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prefix = \"food-classifier\"\n",
+    "datafolder = \"../data/food-101\"\n",
+    "# upload all data to S3\n",
+    "input_data = sagemaker_session.upload_data(path=datafolder, bucket=bucket, key_prefix=prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check that data is in S3 bucket\n",
+    "empty_check = []\n",
+    "for obj in boto3.resource('s3').Bucket(bucket).objects.all():\n",
+    "    empty_check.append(obj.key)\n",
+    "    print(obj.key)\n",
+    "\n",
+    "assert len(empty_check) !=0, 'S3 bucket is empty.'\n",
+    "print('All good!')"
+   ]
   }
  ],
  "metadata": {
