Time monitor added to upload cell : The upload process to transfer data to s3 bucket results extremely slow (about 1 hour waiting), so a time.time() system to effectively monitor the time needed has been added. An additional checker for the completed upload has been included in the next notebook cell

--- a/food-classifier_sagemaker.ipynb
+++ b/food-classifier_sagemaker.ipynb
@@ -64,7 +64,8 @@
     "import numpy as np\n",
     "import shutil\n",
     "import os\n",
-    "from os import path"
+    "from os import path\n",
+    "import time"
    ]
   },
   {
@@ -170,14 +171,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "prefix = \"food-classifier\"\n",
     "datafolder = \"../data/food-101\"\n",
     "# upload all data to S3\n",
-    "input_data = sagemaker_session.upload_data(path=datafolder, bucket=bucket, key_prefix=prefix)"
+    "\n",
+    "#this is slow!\n",
+    "start = time.time()\n",
+    "input_data = sagemaker_session.upload_data(path=datafolder, bucket=bucket, key_prefix=prefix)\n",
+    "end = time.time()\n",
+    "\n",
+    "print(\"Data uploaded to s3 after {} seconds\".format(end - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All good!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check that data is in S3 bucket\n",
+    "empty_check = []\n",
+    "for obj in boto3.resource('s3').Bucket(bucket).objects.all():\n",
+    "    empty_check.append(obj.key)\n",
+    "    #print(obj.key)\n",
+    "\n",
+    "assert len(empty_check) !=0, 'S3 bucket is empty.'\n",
+    "print('All good!')"
    ]
   },
   {
@@ -185,16 +216,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# check that data is in S3 bucket\n",
-    "empty_check = []\n",
-    "for obj in boto3.resource('s3').Bucket(bucket).objects.all():\n",
-    "    empty_check.append(obj.key)\n",
-    "    print(obj.key)\n",
-    "\n",
-    "assert len(empty_check) !=0, 'S3 bucket is empty.'\n",
-    "print('All good!')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
