metadata org., transformers, data loaders and GPU settings : metadata have been used to organise training, validation and testing files using a reduced version of the dataset. A specific function organise_files_from_df has been created to perform the operation using the metadata contained in the json files. pytorch transformers, data loaders and GPU vs CPU settings implemented.

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -96,7 +96,79 @@
     "\n",
     "valid_meta = train_meta[selection].iloc[train_meta.shape[0] - val_split_idx:]\n",
     "\n",
-    "test_meta = test_meta[selection]"
+    "test_meta = test_meta[selection]\n",
+    "\n",
+    "print(\"{} images used for training\".format(train_meta.shape[0]*train_meta.shape[1]))\n",
+    "print(\"{} images used for validation\".format(valid_meta.shape[0]*valid_meta.shape[1]))\n",
+    "print(\"{} images used for testing\".format(test_meta.shape[0]*test_meta.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dividing into train and test set using the json metadata \n",
+    "\n",
+    "def organise_files_from_df(df, datafolder, datatarget):\n",
+    "    \"\"\"\n",
+    "    This function moves files contained in a folder (datafolder) to a target path (datatarget),\n",
+    "    based on the information contained on a dataframe (df) where each column corresponds to a \n",
+    "    class name (sub-folder). Every column of the dataset contains a list of filenames to be moved.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    #creating target folder\n",
+    "    if not path.exists(datatarget):\n",
+    "        os.mkdir(datatarget)\n",
+    "    \n",
+    "    #iterating through dataframe columns ( =  labels)\n",
+    "    for label in list(df.columns):\n",
+    "        \n",
+    "        #create folder\n",
+    "        foldername = datatarget + str(label)\n",
+    "        \n",
+    "        if not path.exists(foldername):\n",
+    "            os.mkdir(foldername)\n",
+    "        \n",
+    "        #move each file\n",
+    "        for file in list(df[label]):\n",
+    "            \n",
+    "            fileoriginal =  datafolder + file + \".jpg\"\n",
+    "            filetarget = datatarget +\"/\" + file + \".jpg\"\n",
+    "            \n",
+    "            try:\n",
+    "                if not path.exists(filetarget):\n",
+    "                    shutil.copyfile(fileoriginal, filetarget)\n",
+    "\n",
+    "            except FileNotFoundError:\n",
+    "                print(\"File {} not found!\".format(file))\n",
+    "                pass\n",
+    "\n",
+    "#origin folder\n",
+    "imagefolder = \"../data/food-101/images/\"\n",
+    "\n",
+    "#target folder - train\n",
+    "trainfolder = \"../data/food-101/train_img/\"\n",
+    "organise_files_from_df(train_meta, imagefolder, trainfolder)\n",
+    "\n",
+    "#target folder - validation\n",
+    "validfolder = \"../data/food-101/valid_img/\"\n",
+    "organise_files_from_df(valid_meta, imagefolder, validfolder)\n",
+    "\n",
+    "#target folder -test\n",
+    "testfolder = \"../data/food-101/test_img/\"\n",
+    "organise_files_from_df(test_meta, imagefolder, testfolder)\n",
+    "\n",
+    "#to delete the origin folder, uncomment the line below\n",
+    "#shutil.rmtree(imagefolder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Transformers set-up for train, validation and test data"
    ]
   },
   {
@@ -104,7 +176,96 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Norm values\n",
+    "norm_mean = [0.485, 0.456, 0.406]\n",
+    "norm_std = [0.229, 0.224, 0.225]\n",
+    "\n",
+    "#Img size parameters\n",
+    "img_short_side_resize = 256\n",
+    "img_input_size = 224\n",
+    "\n",
+    "import os\n",
+    "from torchvision import datasets\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "\n",
+    "transform_train = transforms.Compose([\n",
+    "                    transforms.Resize(img_short_side_resize),\n",
+    "                    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
+    "                    transforms.RandomHorizontalFlip(),\n",
+    "                    transforms.RandomResizedCrop(img_input_size, scale=(0.08,1), ratio=(1,1)), \n",
+    "                    transforms.ToTensor(),\n",
+    "                    transforms.Normalize(mean = norm_mean, std = norm_std)])\n",
+    "transform_test = transforms.Compose([\n",
+    "                    transforms.Resize(img_input_size),  \n",
+    "                    transforms.FiveCrop(img_input_size),\n",
+    "                    transforms.Lambda(lambda crops: torch.stack([transforms.Compose([\n",
+    "                    transforms.ToTensor(),\n",
+    "                    transforms.Normalize(mean = norm_mean, std = norm_std)])(crop) for crop in crops]))])\n",
+    "\n",
+    "train_data = datasets.ImageFolder(trainfolder, transform_train)\n",
+    "valid_data = datasets.ImageFolder(validfolder, transform_test)\n",
+    "test_data = datasets.ImageFolder(testfolder, transform_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Data loaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "shuffle = True\n",
+    "num_workers = 16\n",
+    "batch_size = 64\n",
+    "\n",
+    "# Create the data loaders\n",
+    "data = {\"train\" : train_data, \"val\":valid_data, \"test\" : test_data}\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(data[\"train\"], batch_size=batch_size, num_workers=num_workers, shuffle=shuffle, pin_memory=True)\n",
+    "\n",
+    "#### --- NOTE on num_workers if using 5crop and batch_size for testing --- ###\n",
+    "# If using the 5crop test time augmentation, num_workers = 0 (an error is raised otherwise) \n",
+    "# batch_size needs to be reduced during testing due to memory requirements\n",
+    "valid_loader = torch.utils.data.DataLoader(data[\"val\"], batch_size=int(np.floor(batch_size/5)), num_workers=0, shuffle=shuffle, pin_memory=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(data[\"test\"], batch_size=int(np.floor(batch_size/5)), num_workers=0, shuffle=shuffle, pin_memory=True)\n",
+    "loaders_transfer = {\"train\" : train_loader, \"val\":valid_loader, \"test\" : test_loader}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### CPU vs GPU "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#setting CPU vs GPU\n",
+    "\n",
+    "use_cuda = torch.cuda.is_available()\n",
+    "if not use_cuda:\n",
+    "    print('CUDA is not available.  Training on CPU ...')\n",
+    "    device = \"cpu\"\n",
+    "else:\n",
+    "    print('CUDA is available!  Training on GPU ...')\n",
+    "    device = torch.device(\"cuda:0\")\n",
+    "    print(\"Using\",torch.cuda.get_device_name(device))"
+   ]
   }
  ],
  "metadata": {
