Loading pre-trained ResNet for transfer learning : resnet50 from the pytorch models library is used. The end of the loaded neural network is sliced off, a new fully connected layer that matches the number of classes is added. CrossEntropyLoss() is selected as loss function. Adam is chosen as optimiser. ReduceLROnPlateau set with patience 7 and factor 0.5 .

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -266,6 +266,66 @@
     "    device = torch.device(\"cuda:0\")\n",
     "    print(\"Using\",torch.cuda.get_device_name(device))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Loading pre-trained ResNet for transfer learning\n",
+    "- slice off the end of the neural network\n",
+    "- add a new fully connected layer that matches the number of classes in the new data set\n",
+    "- randomize the weights of the new fully connected layer; freeze all the weights from the pre-trained network\n",
+    "- train the network to update the weights of the new fully connected layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision.models as models\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "model_transfer = models.resnet50(pretrained=True)\n",
+    "\n",
+    "#freezing the parameters\n",
+    "for param in model_transfer.parameters():\n",
+    "    param.requires_grad = False\n",
+    "    \n",
+    "n_classes = len(train_data.classes)\n",
+    "\n",
+    "# Replacing the last layer with a fully connected layer to retrain\n",
+    "model_transfer.fc = nn.Linear(model_transfer.fc.in_features,n_classes)\n",
+    "\n",
+    "# Initialize the weights of the new layer\n",
+    "nn.init.kaiming_normal_(model_transfer.fc.weight, nonlinearity='relu')\n",
+    "\n",
+    "# Transfer to GPU \n",
+    "model_transfer = model_transfer.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Loss function and optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#specify loss function and optimizer\n",
+    "import torch.optim as optim\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "\n",
+    "criterion_transfer = nn.CrossEntropyLoss()\n",
+    "optimizer_transfer = optim.Adam(model_transfer.parameters(),3e-4) \n",
+    "scheduler_transfer = ReduceLROnPlateau(optimizer_transfer, 'min', verbose = True, factor = 0.5, patience = 7)"
+   ]
   }
  ],
  "metadata": {
