Training and testing function for mini_experiment implemented

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -84,7 +84,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6000 images used for training\n",
+      "1500 images used for validation\n",
+      "2500 images used for testing\n"
+     ]
+    }
+   ],
    "source": [
     "#organising metadata for training, testing and validation\n",
     "validation_split = 0.2\n",
@@ -97,6 +107,16 @@
     "valid_meta = train_meta[selection].iloc[train_meta.shape[0] - val_split_idx:]\n",
     "\n",
     "test_meta = test_meta[selection]\n",
+    "\n",
+    "#Setting train, validation and test set target folder\n",
+    "#target folder - train\n",
+    "trainfolder = \"../data/food-101/train_img/\"\n",
+    "\n",
+    "#target folder - validation\n",
+    "validfolder = \"../data/food-101/valid_img/\"\n",
+    "\n",
+    "#target folder -test\n",
+    "testfolder = \"../data/food-101/test_img/\"\n",
     "\n",
     "print(\"{} images used for training\".format(train_meta.shape[0]*train_meta.shape[1]))\n",
     "print(\"{} images used for validation\".format(valid_meta.shape[0]*valid_meta.shape[1]))\n",
@@ -148,16 +168,12 @@
     "#origin folder\n",
     "imagefolder = \"../data/food-101/images/\"\n",
     "\n",
-    "#target folder - train\n",
-    "trainfolder = \"../data/food-101/train_img/\"\n",
+    "\n",
     "organise_files_from_df(train_meta, imagefolder, trainfolder)\n",
     "\n",
-    "#target folder - validation\n",
-    "validfolder = \"../data/food-101/valid_img/\"\n",
+    "\n",
     "organise_files_from_df(valid_meta, imagefolder, validfolder)\n",
     "\n",
-    "#target folder -test\n",
-    "testfolder = \"../data/food-101/test_img/\"\n",
     "organise_files_from_df(test_meta, imagefolder, testfolder)\n",
     "\n",
     "#to delete the origin folder, uncomment the line below\n",
@@ -325,6 +341,227 @@
     "criterion_transfer = nn.CrossEntropyLoss()\n",
     "optimizer_transfer = optim.Adam(model_transfer.parameters(),3e-4) \n",
     "scheduler_transfer = ReduceLROnPlateau(optimizer_transfer, 'min', verbose = True, factor = 0.5, patience = 7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Training function implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import datetime\n",
+    "\n",
+    "def train_epoch(model,train_loader,optimizer,criterion,device):\n",
+    "    \"\"\"\n",
+    "    train steps at each epoch\n",
+    "    \"\"\"\n",
+    "    train_loss = 0.0\n",
+    "    \n",
+    "    model.train()\n",
+    "    \n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        \n",
+    "        data, target = data.to(device), target.to(device) # move to GPU\n",
+    "        \n",
+    "        optimizer.zero_grad() # set gradients to 0\n",
+    "        \n",
+    "        output = model(data) # get output\n",
+    "        \n",
+    "        loss = criterion(output, target) # calculate loss\n",
+    "        train_loss += loss.item() * data.size(0)\n",
+    "        \n",
+    "        loss.backward() # calculate gradients\n",
+    "        \n",
+    "        optimizer.step() # take step\n",
+    "        \n",
+    "    train_loss = train_loss / len(train_loader.dataset)\n",
+    "    return model, train_loss\n",
+    "        \n",
+    "def valid_epoch(model, valid_loader, criterion, device, fivecrop):\n",
+    "    \"\"\"\n",
+    "    validation prediction steps at each epoch\n",
+    "    \"\"\"\n",
+    "    valid_loss = 0.0\n",
+    "    \n",
+    "    model.eval()\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for data, target in valid_loader:\n",
+    "            \n",
+    "            data, target = data.to(device), target.to(device) # move to GPU\n",
+    "            \n",
+    "            # if we do test time augmentation with 5crop we'll have an extra dimension in our tensor\n",
+    "            if fivecrop == \"mean\":\n",
+    "                bs, ncrops, c, h, w = data.size()\n",
+    "                output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
+    "                output = output.view(bs, ncrops, -1).mean(1)\n",
+    "            elif fivecrop == \"max\":\n",
+    "                bs, ncrops, c, h, w = data.size()\n",
+    "                output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
+    "                output = output.view(bs, ncrops, -1).max(1)[0]\n",
+    "            else:\n",
+    "                output = model(data)\n",
+    "                \n",
+    "            ## update the average validation loss\n",
+    "            loss = criterion(output, target)\n",
+    "            valid_loss += loss.item() * data.size(0)\n",
+    "            \n",
+    "    valid_loss = valid_loss / len(valid_loader.dataset) \n",
+    "    return valid_loss\n",
+    "\n",
+    "\n",
+    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None):\n",
+    "    \"\"\"\n",
+    "    model training\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # initialize tracker for minimum validation loss\n",
+    "    valid_loss_min = np.Inf \n",
+    "    train_loss = []\n",
+    "    valid_loss = []\n",
+    "    \n",
+    "    time_start = time.time()\n",
+    "    \n",
+    "    for epoch in range(1, n_epochs+1):\n",
+    "        \n",
+    "        time_start_epoch = time.time()  \n",
+    "        \n",
+    "        # train current epoch\n",
+    "        model, train_loss_epoch = train_epoch(model,loaders[\"train\"],optimizer,criterion,device) \n",
+    "        train_loss.append(train_loss_epoch)   \n",
+    "        \n",
+    "        # validate current epoch\n",
+    "        valid_loss_epoch = valid_epoch(model,loaders[\"val\"],criterion,device,fivecrop)\n",
+    "        \n",
+    "        # learning rate scheduler\n",
+    "        if lr_scheduler is not None:\n",
+    "            lr_scheduler.step(valid_loss_epoch)\n",
+    "        valid_loss.append(valid_loss_epoch)  \n",
+    "        \n",
+    "        if valid_loss_epoch <= valid_loss_min: # save if validation loss is the lowest so far\n",
+    "            torch.save(model.state_dict(), path_model)\n",
+    "            valid_loss_min = valid_loss_epoch \n",
+    "            \n",
+    "        # print epoch stats\n",
+    "        currentDT = datetime.datetime.now()\n",
+    "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
+    "        print('Epoch {} done in {:.2f} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
+    "            epoch,             \n",
+    "            time.time() - time_start_epoch,\n",
+    "            exact_time,\n",
+    "            train_loss_epoch,\n",
+    "            valid_loss_epoch\n",
+    "            ))   \n",
+    "        \n",
+    "    # print final statistics    \n",
+    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") #Minimum validation loss: {valid_loss_min:.3f}\")\n",
+    "    \n",
+    "    # Load best config\n",
+    "    model.load_state_dict(torch.load(path_model))\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train the model\n",
+    "n_epochs = 50\n",
+    "\n",
+    "model_transfer = train(n_epochs, \n",
+    "                       loaders_transfer, \n",
+    "                       model_transfer, \n",
+    "                       optimizer_transfer, \n",
+    "                       criterion_transfer, \n",
+    "                       device, \n",
+    "                       'model_transfer.pt', \n",
+    "                       fivecrop = \"mean\", \n",
+    "                       lr_scheduler = scheduler_transfer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Testing function implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(loaders, model, criterion, device):\n",
+    "    \"\"\"\n",
+    "    test function\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    test_loss = 0.\n",
+    "    correct = 0.\n",
+    "    total = 0.\n",
+    "    \n",
+    "    model.eval()\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        \n",
+    "        for batch_idx, (data, target) in enumerate(loaders['test']):\n",
+    "            \n",
+    "            data, target = data.to(device), target.to(device) # move to GPU\n",
+    "            \n",
+    "            bs, ncrops, c, h, w = data.size()\n",
+    "            \n",
+    "            # forward pass: compute predicted outputs by passing inputs to the model\n",
+    "            output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
+    "            output = output.view(bs, ncrops, -1).mean(1)    \n",
+    "            \n",
+    "            loss = criterion(output, target) # calculate the loss\n",
+    "            \n",
+    "            test_loss = test_loss + ((1 / (batch_idx + 1)) * (loss.data - test_loss)) # update average test loss \n",
+    "            \n",
+    "            pred = output.data.max(1, keepdim=True)[1] # convert output probabilities to predicted class\n",
+    "            \n",
+    "            # compare predictions to true label\n",
+    "            correct += np.sum(np.squeeze(pred.eq(target.data.view_as(pred))).cpu().numpy()) \n",
+    "            total += data.size(0)            \n",
+    "            \n",
+    "    print('Test Loss: {:.6f}\\n'.format(test_loss))\n",
+    "    print('\\nTest Accuracy: %2d%% (%2d/%2d)' % (\n",
+    "        100. * correct / total, correct, total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ## Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(loaders_transfer, model_transfer, criterion_transfer, device)"
    ]
   }
  ],
