Print statement on minimum valiation loss added : at the end of training, the best epoch corresponding to the minimum validation loss is printed with the validation loss itself

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -525,6 +525,7 @@
     "    valid_loss = []\n",
     "    \n",
     "    time_start = time.time()\n",
+    "    best_epoch = 0\n",
     "    \n",
     "    for epoch in range(1, n_epochs+1):\n",
     "        \n",
@@ -545,6 +546,7 @@
     "        if valid_loss_epoch <= valid_loss_min: # save if validation loss is the lowest so far\n",
     "            torch.save(model.state_dict(), path_model)\n",
     "            valid_loss_min = valid_loss_epoch \n",
+    "            best_epoch = epoch\n",
     "            \n",
     "        # print epoch stats\n",
     "        currentDT = datetime.datetime.now()\n",
@@ -558,7 +560,9 @@
     "            ))   \n",
     "        \n",
     "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") #Minimum validation loss: {valid_loss_min:.3f}\")\n",
+    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") \n",
+    "    \n",
+    "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min))\n",
     "    \n",
     "    # Load best config\n",
     "    model.load_state_dict(torch.load(path_model))\n",
