device settings changed from 'cpu:0' to 'cpu'

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -375,7 +375,7 @@
     "    device = \"cpu\"\n",
     "else:\n",
     "    print('CUDA is available!  Training on GPU ...')\n",
-    "    device = torch.device(\"cuda:0\")\n",
+    "    device = torch.device(\"cuda\")\n",
     "    print(\"Using\",torch.cuda.get_device_name(device))"
    ]
   },
