Train, Validation and test split organisation changed, recreated folder to upload. Splits adapted to the mini-experiment

--- a/food-classifier_sagemaker.ipynb
+++ b/food-classifier_sagemaker.ipynb
@@ -65,7 +65,8 @@
     "import shutil\n",
     "import os\n",
     "from os import path\n",
-    "import time"
+    "import time\n",
+    "from random import seed, choice"
    ]
   },
   {
@@ -85,7 +86,102 @@
     "\n",
     "metafolder = \"../data/food-101/meta/\"\n",
     "train_meta = pd.read_json(path_or_buf = metafolder + \"train.json\")\n",
-    "test_meta = pd.read_json(path_or_buf = metafolder + \"test.json\")\n",
+    "test_meta = pd.read_json(path_or_buf = metafolder + \"test.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Organising metdatada for training, testing and validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected categories : ramen, carrot_cake, beef_carpaccio, strawberry_shortcake, escargots, donuts, croque_madame, cheesecake, caprese_salad, sashimi, oysters, caesar_salad, pho, hot_and_sour_soup, beef_tartare, creme_brulee, cup_cakes, miso_soup, pork_chop, paella, club_sandwich, spaghetti_carbonara, red_velvet_cake, shrimp_and_grits, hamburger\n"
+     ]
+    }
+   ],
+   "source": [
+    "#organising metadata for training, testing and validation\n",
+    "validation_split = 0.2\n",
+    "val_split_idx = int(np.floor(train_meta.shape[0]*validation_split))\n",
+    "\n",
+    "#folder with all the food images\n",
+    "data_dir = \"../data/food-101/images/\"\n",
+    "folders_sorted = sorted(os.listdir(data_dir))\n",
+    "\n",
+    "#number of categories to randomly select\n",
+    "nc = 25\n",
+    "\n",
+    "#selecting a randomn subset of categories\n",
+    "seed(42)\n",
+    "\n",
+    "selection = []\n",
+    "while len(selection) < nc:\n",
+    "    pick = choice(folders_sorted)\n",
+    "    if pick not in set(selection):\n",
+    "        selection.append(pick)\n",
+    "        \n",
+    "print(\"Selected categories : {}\".format(', '.join(map(str, selection))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15000 images used for training\n",
+      "3750 images used for validation\n",
+      "6250 images used for testing\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create folder with data to upload to s3\n",
+    "%mkdir ../data/food_data/train_img \n",
+    "%mkdir ../data/food_data/valid_img\n",
+    "%mkdir ../data/food_data/test_img\n",
+    "\n",
+    "train_meta = train_meta[selection].iloc[:train_meta.shape[0] - val_split_idx]\n",
+    "\n",
+    "valid_meta = train_meta[selection].iloc[train_meta.shape[0] - val_split_idx:]\n",
+    "\n",
+    "test_meta = test_meta[selection]\n",
+    "\n",
+    "#Setting train, validation and test set target folder\n",
+    "#target folder - train\n",
+    "trainfolder = \"../data/food_data/train_img/\"\n",
+    "\n",
+    "#target folder - validation\n",
+    "validfolder = \"../data/food_data/valid_img/\"\n",
+    "\n",
+    "#target folder -test\n",
+    "testfolder = \"../data/food_data/test_img/\"\n",
+    "\n",
+    "print(\"{} images used for training\".format(train_meta.shape[0]*train_meta.shape[1]))\n",
+    "print(\"{} images used for validation\".format(valid_meta.shape[0]*valid_meta.shape[1]))\n",
+    "print(\"{} images used for testing\".format(test_meta.shape[0]*test_meta.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dividing into train and test set using the json metadata \n",
     "\n",
     "def organise_files_from_df(df, datafolder, datatarget):\n",
     "    \"\"\"\n",
@@ -124,16 +220,15 @@
     "#origin folder\n",
     "imagefolder = \"../data/food-101/images/\"\n",
     "\n",
-    "#target folder - train\n",
-    "trainfolder = \"../data/food-101/train_img/\"\n",
+    "\n",
     "organise_files_from_df(train_meta, imagefolder, trainfolder)\n",
     "\n",
-    "#target folder -test\n",
-    "testfolder = \"../data/food-101/test_img/\"\n",
+    "organise_files_from_df(valid_meta, imagefolder, validfolder)\n",
+    "\n",
     "organise_files_from_df(test_meta, imagefolder, testfolder)\n",
     "\n",
-    "#deleting origin folder\n",
-    "shutil.rmtree(imagefolder)"
+    "#to delete the origin folder, uncomment the line below\n",
+    "#shutil.rmtree(imagefolder)"
    ]
   },
   {
