models directory changed in "train"

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -704,7 +704,7 @@
     "                       optimizer_transfer, \n",
     "                       criterion_transfer, \n",
     "                       device, \n",
-    "                       'model_transfer_{}cat.pt'.format(nc), \n",
+    "                       'models/model_transfer_{}cat.pt'.format(nc), \n",
     "                       fivecrop = \"mean\", \n",
     "                       lr_scheduler = scheduler_transfer)"
    ]
